Revision history for Mojolicious::Plugin::CaptchaPNG

{{$NEXT}}

1.02      2025-02-04 16:27:13-08:00 America/Los_Angeles

1.01      2025-02-04 16:08:33-08:00 America/Los_Angeles
        - First version, released on an unsuspecting world