@@ -1,6 +1,7 @@
 Revision history for Mojolicious::Plugin::CaptchaPNG
 
 {{$NEXT}}
+        - Add set_captcha_value (for easier testing, I guess)
 
 1.02      2025-02-04 16:27:13-08:00 America/Los_Angeles
 
